--- a/src/main/resources/ohii/mokinvaraus_app/hello-view.fxml
+++ b/src/main/resources/ohii/mokinvaraus_app/hello-view.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -14,6 +15,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
@@ -51,6 +53,8 @@
                                         <Font name="Georgia" size="40.0" />
                                     </font>
                                 </Label>
+                        <CheckBox layoutX="276.0" layoutY="118.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="158.0" />
+                        <CheckBox layoutX="276.0" layoutY="147.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="23.0" />
                             </children>
                         </AnchorPane>
                     </content>
@@ -148,7 +152,62 @@
             </Tab>
             <Tab text="Majoittumisen raportointi">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Label layoutX="13.0" layoutY="14.0" prefHeight="38.0" prefWidth="184.0" text="Viimeiset 365 päivää:">
+                           <font>
+                              <Font size="19.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="20.0" layoutY="63.0" prefHeight="37.0" prefWidth="187.0" text="Kaikkien mökkien varauspäivät :">
+                           <font>
+                              <Font size="13.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="20.0" layoutY="118.0" prefHeight="37.0" prefWidth="187.0" text="joista yksityisasiakkaita (%) :">
+                           <font>
+                              <Font size="13.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="20.0" layoutY="145.0" prefHeight="37.0" prefWidth="187.0" text="joista yritysasiakkaita (%) :">
+                           <font>
+                              <Font size="13.0" />
+                           </font>
+                        </Label>
+                        <TextField layoutX="214.0" layoutY="68.0" prefHeight="26.0" prefWidth="107.0" />
+                        <TextField layoutX="214.0" layoutY="198.0" prefHeight="26.0" prefWidth="107.0" />
+                        <TextField layoutX="214.0" layoutY="123.0" prefHeight="26.0" prefWidth="107.0" />
+                        <TextField layoutX="214.0" layoutY="150.0" prefHeight="26.0" prefWidth="107.0" />
+                        <Line endX="226.79998779296875" endY="3.814697265625E-6" layoutX="114.0" layoutY="59.0" startX="-100.0" />
+                        <Line endX="217.79998779296875" layoutX="123.0" layoutY="185.0" startX="-108.903564453125" startY="0.207061767578125" />
+                        <Line endX="-306.61065673828125" endY="94.29290771484375" layoutX="320.0" layoutY="208.0" startX="-306.70709228515625" startY="-148.29290771484375" />
+                        <Line endX="-313.492919921875" endY="99.29290771484375" layoutX="655.0" layoutY="203.0" startX="-313.492919921875" startY="-143.29290771484375" />
+                        <Line endX="217.79998779296875" layoutX="123.0" layoutY="303.0" startX="-108.903564453125" startY="0.207061767578125" />
+                        <Label layoutX="20.0" layoutY="195.0" prefHeight="33.0" prefWidth="187.0" text="Kaikkien mökkien yhteistuotto :">
+                           <font>
+                              <Font size="13.0" />
+                           </font>
+                        </Label>
+                        <TextField layoutX="214.0" layoutY="95.0" prefHeight="26.0" prefWidth="107.0" />
+                        <Label layoutX="20.0" layoutY="90.0" prefHeight="37.0" prefWidth="187.0" text="Erillisten varausten määrä :">
+                           <font>
+                              <Font size="13.0" />
+                           </font>
+                        </Label>
+                        <TextField layoutX="214.0" layoutY="230.0" prefHeight="26.0" prefWidth="107.0" />
+                        <Label layoutX="20.0" layoutY="224.0" prefHeight="39.0" prefWidth="187.0" text="Tuotto /per varaus :">
+                           <font>
+                              <Font size="13.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="20.0" layoutY="254.0" prefHeight="39.0" prefWidth="187.0" text="Vuorokautta /per varaus :">
+                           <font>
+                              <Font size="13.0" />
+                           </font>
+                        </Label>
+                        <TextField layoutX="214.0" layoutY="261.0" prefHeight="26.0" prefWidth="107.0" />
+                     </children>
+                  </AnchorPane>
               </content>
             </Tab>
             </tabs>
