--- a/src/main/resources/ohii/mokinvaraus_app/hello-view.fxml
+++ b/src/main/resources/ohii/mokinvaraus_app/hello-view.fxml
@@ -79,7 +79,7 @@
                                                 <DatePicker fx:id="alku2DP" promptText="Alku pvm." />
                                                 <DatePicker fx:id="lopetus2DP" promptText="Lopetus pvm." />
                                                 <ComboBox fx:id="mokki2CB" prefWidth="150.0" promptText="Mökki" />
-                                                <Button fx:id="peruutavarausBut" mnemonicParsing="false" text="PERU/POISTA" />
+                                                <Button fx:id="peruutavarausBut" mnemonicParsing="false" onAction="#poistavaraus" text="PERU/POISTA" />
                                                 <Button fx:id="tallennavarausBut" mnemonicParsing="false" onAction="#muokkauksentallennus" text="TALLENNA" />
                                             </children>
                                             <opaqueInsets>
