--- a/src/main/resources/ohii/mokinvaraus_app/hello-view.fxml
+++ b/src/main/resources/ohii/mokinvaraus_app/hello-view.fxml
@@ -37,7 +37,7 @@
                                         <DatePicker fx:id="lopetusDP" promptText="Lopetus pvm." />
                                         <ComboBox fx:id="mokkiCB" prefWidth="150.0" promptText="Mökki" />
                                         <Button fx:id="luovarausBut" mnemonicParsing="false" onAction="#varauksenluonti" text="LUO VARAUS" />
-                              <Button fx:id="luolaskuBut" mnemonicParsing="false" text="LUO LASKU" />
+                              <Button fx:id="luolaskuBut" mnemonicParsing="false" onAction="#luolasku" text="LUO LASKU" />
                                     </children>
                                     <opaqueInsets>
                                         <Insets />
@@ -134,8 +134,9 @@
                                 <TextField fx:id="vrkhinta2TF" layoutX="390.0" layoutY="137.0" prefHeight="26.0" prefWidth="196.0" promptText="Hinta (vrk)" />
                                 <TextField fx:id="kokhintaTF" layoutX="390.0" layoutY="208.0" prefHeight="26.0" prefWidth="196.0" promptText="Kokonaishinta" />
                                 <TextField fx:id="vrkaikaTF" layoutX="390.0" layoutY="173.0" prefHeight="26.0" prefWidth="196.0" promptText="Aika (vrk)" />
-                                <Button fx:id="tallennalaskuBut" layoutX="390.0" layoutY="242.0" mnemonicParsing="false" text="TALLENNA" />
-                                <Button fx:id="poistalaskuBut" layoutX="390.0" layoutY="279.0" mnemonicParsing="false" text="POISTA" />
+                                <Button fx:id="tallennalaskuBut" layoutX="390.0" layoutY="242.0" mnemonicParsing="false" onAction="#tallennalasku" text="TALLENNA" />
+                                <Button fx:id="poistalaskuBut" layoutX="477.0" layoutY="242.0" mnemonicParsing="false" onAction="#poistalasku" text="POISTA" />
+                        <Button fx:id="maksettuBut" layoutX="390.0" layoutY="278.0" mnemonicParsing="false" style="-fx-background-color: lightgreen;" text="MERKITSE MAKSETUKSI" />
                             </children>
                         </AnchorPane>
                     </content>
