--- a/src/main/resources/ot1/mokinvaraus_app/Kansilehti.fxml
+++ b/src/main/resources/ot1/mokinvaraus_app/Kansilehti.fxml
@@ -4,38 +4,51 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="375.0" prefWidth="582.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ot1.mokinvaraus_app.SivujenVaihto">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="618.0" prefWidth="1031.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ot1.mokinvaraus_app.kirjatumiscontroller">
     <left>
-        <AnchorPane prefHeight="400.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+        <AnchorPane prefHeight="618.0" prefWidth="700.0" BorderPane.alignment="CENTER">
             <children>
-                <Text layoutX="25.0" layoutY="72.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mökkikodit" wrappingWidth="634.578125">
+                <Text layoutX="14.0" layoutY="131.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mökkikodit">
                     <font>
-                        <Font name="System Bold" size="54.0" />
+                        <Font name="System Bold" size="96.0" />
                     </font>
                 </Text>
-                <Label layoutX="242.0" layoutY="115.0" text="Käyttäjänimi:">
+                <ImageView fitHeight="449.0" fitWidth="718.0" layoutY="169.0" pickOnBounds="true" />
+            </children>
+        </AnchorPane>
+    </left>
+    <center>
+        <AnchorPane prefHeight="618.0" prefWidth="795.0" BorderPane.alignment="CENTER">
+            <children>
+                <Label layoutX="14.0" layoutY="261.0" text="Käyttäjänimi">
                     <font>
                         <Font size="22.0" />
                     </font>
                 </Label>
-                <Label layoutX="278.0" layoutY="157.0" text="Salasana:">
+                <Label layoutX="14.0" layoutY="309.0" text="Salasana">
                     <font>
                         <Font size="22.0" />
                     </font>
                 </Label>
-                <PasswordField layoutX="379.0" layoutY="160.0" promptText="Salasana" />
-                <TextField layoutX="379.0" layoutY="118.0" promptText="Käyttäjänimi" />
-                <Button layoutX="438.0" layoutY="207.0" mnemonicParsing="false" onAction="#vaihdaikkunaan2" text="Kirjaudu">
+                <TextField fx:id="kayttajatunnus" layoutX="150.0" layoutY="265.0" promptText="Käyttäjänimi" />
+                <PasswordField fx:id="salasana" layoutX="150.0" layoutY="313.0" promptText="Salasana" />
+                <Button fx:id="kirjautumisbt" layoutX="150.0" layoutY="366.0" mnemonicParsing="false" onAction="#vaihdaikkunaan2" text="Kirjaudu">
                     <font>
                         <Font size="18.0" />
                     </font>
                 </Button>
+            <Label fx:id="tietokirjautumisesta" layoutX="28.0" layoutY="461.0">
+               <font>
+                  <Font size="25.0" />
+               </font>
+            </Label>
             </children>
         </AnchorPane>
-    </left>
+    </center>
 </BorderPane>
